# spinning-up-rl

./: pyproject.toml
reversing-chinese-text/: eval.sh  generate-dataset.py  rl-500.sh  rl.sh  setup.sh  train.sh
reversing-chinese-text/environments/reverse_chinese/: README.md  pyproject.toml  reverse_chinese.py
spinning-up-rl/: ablations.py  guesser.py  reward_gradient.py
