[project]
name = "reverse-chinese"
description = "Reverse a given chunk of chinese text; evaluated by LCS similarity between the parsed answer and ground-truth reversal."
tags = ["text", "transformation", "single-turn", "xml"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post2",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["reverse_chinese.py", "pyproject.toml"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
